--- a/projectsite/templates/base.html
+++ b/projectsite/templates/base.html
@@ -76,7 +76,7 @@
               <div class="info">
                 <a data-toggle="collapse" href="#collapseExample" aria-expanded="true">
                   <span>
-                    Hizrian
+                    LarrYuan
                     <span class="user-level">Administrator</span>
                     <span class="caret"></span>
                   </span>
@@ -171,7 +171,7 @@
                       </a>
                     </li>
                     <li>
-                      <a href="maps/jqvmap.html">
+                      <a href="{% url 'map-incidents' %}">
                         <span class="sub-item">Fire Incidents</span>
                       </a>
                     </li>
