--- a/projectsite/templates/base.html
+++ b/projectsite/templates/base.html
@@ -135,28 +135,32 @@
               <li class="nav-item">
                 <a data-toggle="collapse" href="#base">
                   <i class="fas fa-layer-group"></i>
-                  <p>Base</p>
+                  <p>Data</p>
                   <span class="caret"></span>
                 </a>
                 <div class="collapse" id="base">
                   <ul class="nav nav-collapse">
-                    <li>
-                      <a href="components/avatars.html">
-                        <span class="sub-item">Avatars</span>
+                    <li class="nav-item">
+                      <a href="{% url 'firestation-list' %}">
+                        <i class="fas fa-fire"></i>
+                        <p>Fire Stations</p>
                       </a>
                     </li>
-                    <li>
-                      <a href="components/buttons.html">
-                        <span class="sub-item">Buttons</span>
+                    <li class="nav-item">
+                      <a href="{% url 'fireincident-list' %}">
+                        <i class="fas fa-exclamation-triangle"></i>
+                        <p>Fire Incidents</p>
                       </a>
                     </li>
-                    
+                    <li class="nav-item">
+                      <a href="{% url 'location-list' %}">
+                        <i class="fas fa-map-marker-alt"></i>
+                        <p>Location</p>
+                      </a>
+                    </li>
                   </ul>
                 </div>
               </li>
-              
-              
-              
               <li class="nav-item">
                 <a data-toggle="collapse" href="#maps">
                   <i class="fas fa-map-marker-alt"></i>
