--- a/projectsite/templates/chart.html
+++ b/projectsite/templates/chart.html
@@ -40,7 +40,18 @@
         </div>
       </div>
     </div>
-
+    <div class="col-md-6">
+      <div class="card">
+        <div class="card-header">
+          <div class="card-title">Line Chart</div>
+        </div>
+        <div class="card-body">
+          <div class="chart-container">
+            <canvas id="lineChart"></canvas>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
 {% endblock %} {% block chart %}
