--- a/projectsite/templates/weathercon/weathercon_del.html
+++ b/projectsite/templates/weathercon/weathercon_del.html
@@ -1,12 +1,12 @@
 {% extends 'base.html' %} {% load static %} {% block content %}
 <div class="content">
     <div class="container-fluid">
-        <h4 class="page-title">Delete Fire Station</h4>
+        <h4 class="page-title">Delete Weather Condition</h4>
         <div class="row">
             <div class="col-md-12">
                 <div class="card">
                     <div class="card-header">
-                        <div class="card-title">Delete Fire Station</div>
+                        <div class="card-title">Delete Weather Condition</div>
                         <div class="card-category">Bureau of Fire Protection</div>
                     </div>
 
