replace line chart label from active user to Incident

--- a/projectsite/templates/chart.html
+++ b/projectsite/templates/chart.html
@@ -124,7 +124,7 @@
             labels: ["Jan", "Feb", "Mar", "Apr", "May", "Jun", "Jul", "Aug", "Sep", "Oct", "Nov", "Dec"],
             datasets: [
               {
-                label: "Active Users",
+                label: "Incident",
                 borderColor: "#1d7af3",
                 pointBorderColor: "#FFF",
                 pointBackgroundColor: "#1d7af3",
